--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -204,6 +204,7 @@
     </div>
     <div class="height-100">
         <div class="d-flex justify-content-center py-2">
+            <RadzenNotification />
             <div class="w-90">
                 @Body
             </div>
